--- a/frontend/src/Story.css
+++ b/frontend/src/Story.css
@@ -1,12 +1,32 @@
-.Story {
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;700&display=swap');
+
+.App {
+  background-color:  #d4ebf2;
   text-align: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  margin-top: 24px;
+  padding-top: 24px;
+  min-height: 100vh;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  left: 0;
+  z-index: 10;
+}
+
+.title {
+  font-family: 'Fredoka', sans-serif;
+  margin: 0px;
+
 }
 
 .grid {
+  background-color: #d4ebf2;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -41,18 +61,40 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #d4ebf2;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes App-logo-hover {
+  0% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translateY(-20px); 
   }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.App-logo {
+  animation: App-logo-hover 2s infinite ease-in-out; 
+
+}
+
+.generate-button {
+  width: 100%; 
+  padding: 10px; 
+  font-family: 'Fredoke', sans-serif;
+  border-color: #0066b2;
+  border-width: 2px;
+  border-radius: 20px;
+}
+
+div.textArea {
+  border-color: black;
+  border-width: 2px;
 }
